syntax = "proto3";
import "google/api/annotations.proto";

option csharp_namespace = "BlogServiceDemo";

package blog;

// The blog message containing blog information.
message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest
{
	Blog blog = 1;
}

message CreateBlogResponse
{
	Blog blog = 1;
}

message GetBlogRequest
{
	string Id = 1;
}

message GetBlogResponse
{
	Blog blog = 1;
}

message UpdateBlogRequest 
{
	Blog blog = 1;
}

message UpdateBlogResponse
{
	Blog blog = 1;
}

message DeleteBlogRequest 
{
	string id = 1;
}

message DeleteBlogResponse
{
	string message = 1;
}

// The blog service definition.
service BlogService {
	rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {
		option (google.api.http) = {
			post: "/v1/blog"
			body: "blog"
		};
	}

	rpc GetBlog (GetBlogRequest) returns (GetBlogResponse) {
		option (google.api.http) = {
			get: "/v1/blog/{Id}"
		};
	}

	rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse) {
		option (google.api.http) = {
			put: "/v1/blog"
			body: "blog"
		};
	}

	rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse) {
		option (google.api.http) = {
			delete: "/v1/blog/{id}"
		};
	}
}